# UniMAE

./: README.md
src/mapping/: CMakeLists.txt
src/mapping/include/: mapping.h
src/mapping/src/: mapping.cpp  mapping_vis.cpp
src/planner/car_planner/traj_planner/: CMakeLists.txt  package.xml
src/planner/car_planner/traj_planner/include/plan_manage/: planner_manager.h  replan_fsm.h
src/planner/car_planner/traj_planner/launch/: advanced_param.xml  run_in_sim.launch
src/planner/car_planner/traj_planner/src/: planner_manager.cpp  planner_node.cpp  replan_fsm.cpp
src/planner/car_planner/traj_utils/: CMakeLists.txt  package.xml
src/planner/car_planner/traj_utils/msg/: PolynomialTrajectory.msg
src/planner/car_planner/traj_utils/src/: planning_visualization.cpp
src/planner/kino_car_planner/: CMakeLists.txt  package.xml
src/planner/kino_car_planner/include/kino_car_planner/: car_search.h
src/planner/kino_car_planner/launch/: car.launch
src/planner/kino_car_planner/param/: default.rviz
src/planner/kino_car_planner/src/: car_search.cpp  car_search_node.cpp
src/simulator/camera_simulator/: CMakeLists.txt  package.xml
src/simulator/camera_simulator/launch/: cam_sim.launch
src/simulator/camera_simulator/src/: cam_sim_node.cpp  pointcloud_sim_node.cpp
src/simulator/laser_simulator/launch/: laser_sim.launch  params.yaml  simulator.launch
src/simulator/laser_simulator/src/: laser_sim_node.cpp
src/simulator/map_generator/: CMakeLists.txt  package.xml
src/simulator/map_generator/include/: maps.hpp
src/simulator/map_generator/launch/: click_map_generator.launch  map_generate.launch  map_publisher.launch  map_recorder.launch  mockamap.launch
src/simulator/map_generator/resource/: house_1.pcd
src/simulator/map_generator/rviz_config/: cjx.rviz  template.rviz
src/simulator/map_generator/src/: click_map.cpp  map_generator.py  map_publisher.cpp  map_recorder.cpp  maps.cpp  mockamap.cpp
src/simulator/scenario/: CMakeLists.txt  package.xml
src/simulator/scenario/launch/: cooperative_search.launch  leap_simulator.launch  run.launch  run_kinematics_sim.launch  run_planner.launch  run_quadrotor_sim.launch  run_simulator.launch  rviz_sim.launch  uav_simulator.launch  ugv_simulator.launch  yutu_simulator.launch
src/simulator/scenario/rviz/: rviz_sim.rviz
src/simulator/simulator/fake_agent/src/: poscmd_2_odom.cpp
src/simulator/simulator/kinematics_simulator/: CMakeLists.txt  package.xml
src/simulator/simulator/kinematics_simulator/config/: viscar_tmp.rviz
src/simulator/simulator/kinematics_simulator/launch/: run_simulator.launch  run_viscar.launch
src/simulator/simulator/kinematics_simulator/msg/: Trajectorys.msg
src/simulator/simulator/kinematics_simulator/src/: kinematics_sim.cpp
src/simulator/simulator/obstacle_simulator/: CMakeLists.txt  package.xml
src/simulator/simulator/obstacle_simulator/launch/: obs_vis.launch
src/simulator/simulator/obstacle_simulator/src/: obstacle_sim.cpp  ply2pcd.cpp
src/simulator/simulator/odom_visualization/: CMakeLists.txt
src/simulator/simulator/odom_visualization/launch/: obj_vis.launch
src/simulator/simulator/odom_visualization/meshes/: house_1.ply  yutu.STL
src/simulator/simulator/quadrotor_simulator/: CMakeLists.txt  package.xml
src/simulator/simulator/quadrotor_simulator/config/: visdrone.rviz
src/simulator/simulator/quadrotor_simulator/launch/: run_simulator.launch  run_visdrone.launch
src/simulator/simulator/quadrotor_simulator/meshes/: leap.STL
src/simulator/simulator/quadrotor_simulator/msg/: MincoTraj.msg  Trajectory.msg
src/simulator/simulator/quadrotor_simulator/params/: simulator.yaml
src/simulator/simulator/quadrotor_simulator/src/: quadrotor_gen.py  quadrotor_sim.cpp
src/utils/rviz_plugins/src_tmp/: 2d_goal_tool.cpp  2d_goal_tool.h  CMakeLists.txt  package.xml  plugin_description.xml
(+7 files in other folders)
