<package>
  <version>0.0.0</version>
  <name>obstacle_simulator</name>
  <description>

     obstacle_simulator

  </description>
  <maintainer email="krasjet@todo.todo">Ziping Yu</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/obstacle_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>


